Fixed overlapping elements on wide screens

--- a/styles/main.css
+++ b/styles/main.css
@@ -23,7 +23,20 @@
 
     .segment-text {
         padding-top: 20px;
-        max-height: 11vh;
+        max-height: 13vh;
+    }
+
+    .segment-description .role {
+        font-weight: bold;
+        font-size: 3vh;
+    }
+
+    .segment-description .title {
+        font-size: 2vh;
+    }
+
+    .more {
+        font-size: 1.5vh;
     }
 }
 
@@ -45,6 +58,19 @@
     .segment-text {
         padding-top: 20px;
         max-height: 45vh;
+    }
+
+    .segment-description .role {
+        font-weight: bold;
+        font-size: 6vw;
+    }
+
+    .segment-description .title {
+        font-size: 5vw;
+    }
+
+    .more {
+        font-size: 1.5vw;
     }
 }
 
@@ -76,10 +102,6 @@ body {
     width: 90vw;
 }
 
-.segment-image {
-    height: 47vh;
-}
-
 .carousel-item {
     position: relative;
     height: 100%;
@@ -92,17 +114,4 @@ body {
 .segment-description {
     text-align: center;
     vertical-align: middle;
-}
-
-.segment-description .role {
-    font-weight: bold;
-    font-size: 4vw;
-}
-
-.segment-description .title {
-    font-size: 3vw;
-}
-
-.more {
-    font-size: 1.5vw;
 }
